<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="by.bsuir.schedule.widget.ScheduleWidgetConfigureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/widget_settings"
            android:textSize="@dimen/abc_action_bar_content_inset_material"
            android:id="@+id/textViewScheduleForEmployee"
            android:layout_marginBottom="18dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_subgroup"
            android:textSize="@dimen/abc_action_bar_content_inset_material"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/firstSubGroupRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_sub_group"
                />

            <RadioButton
                android:id="@+id/secondSubGroupRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_sub_group"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/widgetOKButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_widget"
            android:gravity="center"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>
