<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/set_date"
            android:id="@+id/tvSetExamDate" />

        <EditText
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:background="@color/edit_text_background"
            android:id="@+id/etSetExamDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/set_time"
            android:id="@+id/tvSetExamTime" />

        <EditText
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:background="@color/edit_text_background"
            android:id="@+id/etSetExamTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/set_aud"
            android:id="@+id/tvSetExamAud" />
        <EditText
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:background="@color/edit_text_background"
            android:id="@+id/etSetExamAud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/set_subj"
            android:id="@+id/tvSetExamSubj" />
        <EditText
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:background="@color/edit_text_background"
            android:id="@+id/etSetExamSubj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/set_employee_lastname"
            android:id="@+id/tvSetExamEmployeeLastName" />
        <EditText
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:background="@color/edit_text_background"
            android:id="@+id/etSetExamEmpLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/set_employee_firstname"
            android:id="@+id/tvSetExamEmployeeFirstName" />
        <EditText
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:background="@color/edit_text_background"
            android:id="@+id/etSetExamEmpFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/set_employee_middlename"
            android:id="@+id/tvSetExamEmployeeMiddleName" />
        <EditText
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:background="@color/edit_text_background"
            android:id="@+id/etSetExamEmpMiddleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/set_group"
            android:id="@+id/tvSetExamGroup" />
        <EditText
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:background="@color/edit_text_background"
            android:id="@+id/etSetExamGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/set_note"
            android:id="@+id/tvSetExamNote" />
        <EditText
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:background="@color/edit_text_background"
            android:id="@+id/etSetExamNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/set_ltype"
            android:id="@+id/tvSetExamLessonType" />

        <EditText
            android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
            android:background="@color/edit_text_background"
            android:id="@+id/etSetExamLessonType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>