<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.bsuir.schedule.DownloadScheduleForGroup">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/schedule_for_student_group"
            android:textSize="@dimen/abc_action_bar_content_inset_material"
            android:id="@+id/textViewScheduleForGroup"
            android:layout_marginBottom="18dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:id="@+id/viewScheduleForGroup"
            android:layout_marginBottom="40dp"/>

        <AutoCompleteTextView
            android:id="@+id/editTextForEnterGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_student_group_name" />

        <Button
            android:id="@+id/buttonForDownloadSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_schedule" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/downloaded_schedules"
            android:paddingTop="40dp"
            android:textSize="@dimen/abc_action_bar_content_inset_material"
            android:layout_marginBottom="18dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:layout_marginBottom="18dp"/>

        <TableLayout
            android:id="@+id/tableLayoutForGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>
